--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "selenium-econtract": "file:",
     "selenium-webdriver": "^4.24.0"
   }
 }
